[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#http框架
axum = {version="0.5.4",features=["headers"]}
tokio = { version = "1.18.1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
tower = "0.4.12"
tower-http = { version = "0.3.3", features = ["fs",'cors'] }
tower-cookies = "0.6.0"
#orm库
sea-orm = { version = "^0.8.0", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros", 'with-json', ] }
#orm库使用的debug库
tracing = "0.1"
tracing-subscriber = "0.2.0"
#获取环境变量
dotenv = "0.15.0"
#时间处理
chrono = {version="0.4",features=["serde"]}
#json序列化
serde_json = "1.0"
jsonwebtoken = "8.0"

#定义全局数据
lazy_static = "1.4.0"